Добавлено создание, обновление и удаление кинозалов
