# server/internal/api-gateway/handler/handler.go
@@ -74,11 +74,14 @@ func (h *Handler) InitRouter() {
 			authGroup.Get("/cinema/hall/types", h.GetAllCinemaHallTypes)
 
 			authGroup.Post("/cinema", h.CreateCinema)
+			authGroup.Post("/cinema_hall", h.CreateCinemaHall)
 			authGroup.Get("/cinema/address_name", h.GetAllCinemasAddressName)
 			authGroup.Get("/cinema/halls/:id", h.GetAllCinemaHallsByID)
 			authGroup.Get("/cinema/id/:id", h.GetCinemaByID)
 			authGroup.Put("/cinema", h.UpdateCinema)
+			authGroup.Put("/cinema_hall", h.UpdateCinemaHall)
 			authGroup.Delete("/cinema/:id", h.DeleteCinema)
+			authGroup.Delete("/cinema_hall/:id", h.DeleteCinemaHall)
 		}
 
 	}
